# job-assistant

./: .env.example  .gitignore  docker-compose.yml  package-lock.json
backend/: .dockerignore  Dockerfile  auth_utils.py  main.py  pyproject.toml
backend/api/: applications.py  auth.py  cv.py  jobs.py  users.py
backend/db/: database.py  models.py
backend/ml/: __init__.py  cover_letter.py  cv_parser.py  demo_responses.py  interview_prep.py  job_matcher.py  llm_service.py
docker-compose/: docker-compose.yml
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: Layout.jsx  LoginForm.jsx  Navbar.jsx  ProtectedRoute.jsx  RegisterForm.jsx
frontend/src/pages/: Applications.jsx  Dashboard.jsx  Jobs.jsx  Landing.jsx
