[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.12.1",
    "psycopg2-binary>=2.9.7",
    "python-dotenv>=1.2.2",
    "asyncpg>=0.31.0",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=5.0.0",
]
