[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.12.1",
    "psycopg2-binary>=2.9.7",
    "python-dotenv>=1.2.2",
    "asyncpg>=0.31.0",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "ipykernel>=7.2.0",
    "google-genai>=1.67.0",
    "spacy>=3.8.11", # NER — extract skills, companies, dates from CV
    "scikit-learn>=1.8.0", # TF-IDF, Logistic Regression, Isolation Forest
    "rank-bm25>=0.2.2", # BM25 ranking for better job matching
    "nltk>=3.9.3", #Text preprocessing, tokenization
    "en-core-web-sm",
    "fastembed>=0.7.4",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
